[gd_scene load_steps=24 format=3 uid="uid://c8qhitat3fwmt"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_64law"]
[ext_resource type="Script" path="res://scripts/space.gd" id="2_eua3t"]
[ext_resource type="PackedScene" uid="uid://b0nt4n13a6448" path="res://addons/starlight/Stars.tscn" id="2_s3r80"]
[ext_resource type="Texture2D" uid="uid://bfq6ugng7ci0k" path="res://assets/Backgroud.png" id="2_svk2u"]
[ext_resource type="Script" path="res://addons/free_look_camera.gd" id="3_lwc6e"]
[ext_resource type="Script" path="res://scripts/stars_generator.gd" id="4_ewjt0"]
[ext_resource type="Script" path="res://scripts/star_data_reader.gd" id="5_i800h"]
[ext_resource type="Script" path="res://scripts/constellation_editor.gd" id="6_0fq35"]
[ext_resource type="Script" path="res://scripts/user_interface.gd" id="9_f25gg"]
[ext_resource type="Texture2D" uid="uid://bowj8bs6xilck" path="res://assets/Menu.png" id="9_tvk52"]
[ext_resource type="Texture2D" uid="uid://cjw8usgmxgbl2" path="res://assets/Recurso 15.png" id="11_0jene"]
[ext_resource type="Texture2D" uid="uid://dpc8lhvps8dfg" path="res://assets/Recurso 11.png" id="12_08fxs"]
[ext_resource type="Texture2D" uid="uid://dhl5avt4bkhnl" path="res://assets/Recurso 19.png" id="13_f8s88"]
[ext_resource type="Texture2D" uid="uid://dx876msyplp8a" path="res://assets/Modo Foto.png" id="14_iic2x"]
[ext_resource type="PackedScene" uid="uid://ct3800nm2m55p" path="res://UI/planet_selector.tscn" id="14_lcf8p"]
[ext_resource type="PackedScene" uid="uid://d16w6nurn35cm" path="res://UI/buttons_toggle.tscn" id="15_g7ubj"]
[ext_resource type="Texture2D" uid="uid://dnjpq0e6t526n" path="res://assets/BotonActivar (2).png" id="16_okmcr"]
[ext_resource type="Texture2D" uid="uid://braq0q54lggc0" path="res://assets/BotonDesactivar (2).png" id="17_vlufl"]
[ext_resource type="Texture2D" uid="uid://dqp0362hsay5i" path="res://assets/BotonDibujar (2).png" id="18_cc2wn"]
[ext_resource type="Texture2D" uid="uid://bfk2w5k0xjl77" path="res://assets/BotonBorrar (2).png" id="19_xbp7n"]
[ext_resource type="Texture2D" uid="uid://bhcwppdhebb8v" path="res://assets/BotonGuardar (2).png" id="20_dwnad"]

[sub_resource type="Environment" id="Environment_f7ewi"]
background_mode = 2
ambient_light_sky_contribution = 0.0
ambient_light_energy = 0.0

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_fpeva"]

[node name="Main" type="Node"]
script = ExtResource("1_64law")

[node name="background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -1.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_svk2u")

[node name="Space" type="SubViewportContainer" parent="."]
anchors_preset = -1
anchor_left = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
script = ExtResource("2_eua3t")

[node name="SubViewport" type="SubViewport" parent="Space"]
handle_input_locally = false
size = Vector2i(1536, 1080)
render_target_update_mode = 4

[node name="WorldEnvironment" type="WorldEnvironment" parent="Space/SubViewport"]
environment = SubResource("Environment_f7ewi")
camera_attributes = SubResource("CameraAttributesPractical_fpeva")

[node name="Camera3D" type="Camera3D" parent="Space/SubViewport"]
script = ExtResource("3_lwc6e")

[node name="Stars" parent="Space/SubViewport" instance=ExtResource("2_s3r80")]
unique_name_in_owner = true
script = ExtResource("4_ewjt0")

[node name="StarDataReader" type="Node" parent="Space/SubViewport"]
unique_name_in_owner = true
script = ExtResource("5_i800h")

[node name="ConstellationEditor" type="SubViewportContainer" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
script = ExtResource("6_0fq35")

[node name="SubViewport" type="SubViewport" parent="ConstellationEditor"]
handle_input_locally = false
size = Vector2i(1536, 1080)
render_target_update_mode = 0

[node name="TextureRect" type="TextureRect" parent="ConstellationEditor/SubViewport"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 4

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchor_right = 0.2
anchor_bottom = 1.0
grow_vertical = 2
script = ExtResource("9_f25gg")

[node name="background" type="TextureRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_tvk52")
expand_mode = 1

[node name="logos" type="HBoxContainer" parent="UserInterface"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0
alignment = 1

[node name="Nasa" type="TextureRect" parent="UserInterface/logos"]
layout_mode = 2
texture = ExtResource("11_0jene")
stretch_mode = 3

[node name="ARGOS" type="TextureRect" parent="UserInterface/logos"]
layout_mode = 2
texture = ExtResource("12_08fxs")
stretch_mode = 3

[node name="Menu1" type="Control" parent="UserInterface"]
layout_mode = 1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/Menu1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="UserInterface/Menu1/VBoxContainer"]
layout_mode = 2
texture = ExtResource("13_f8s88")
stretch_mode = 5

[node name="PlanetSelector" parent="UserInterface/Menu1/VBoxContainer" instance=ExtResource("14_lcf8p")]
layout_mode = 2
alignment = 1

[node name="CheckBox" type="CheckBox" parent="UserInterface/Menu1/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
button_pressed = true
text = "ACTIVAR DESPLAZAMIENTO"
alignment = 1
icon_alignment = 1
expand_icon = true

[node name="Menu2" type="Control" parent="UserInterface"]
layout_mode = 1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.9
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="UserInterface/Menu2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.3
texture = ExtResource("14_iic2x")
stretch_mode = 5

[node name="ScrollContainer" type="ScrollContainer" parent="UserInterface/Menu2"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/Menu2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
alignment = 1

[node name="ButtonsToggle" parent="UserInterface/Menu2/ScrollContainer/VBoxContainer" instance=ExtResource("15_g7ubj")]
layout_mode = 2
texture_normal = ExtResource("16_okmcr")
stretch_mode = 3
texture1 = ExtResource("16_okmcr")
texture2 = ExtResource("17_vlufl")

[node name="ButtonsToggle2" parent="UserInterface/Menu2/ScrollContainer/VBoxContainer" instance=ExtResource("15_g7ubj")]
layout_mode = 2
texture_normal = ExtResource("18_cc2wn")
stretch_mode = 3
texture1 = ExtResource("18_cc2wn")
texture2 = ExtResource("19_xbp7n")

[node name="TextureButton" type="TextureButton" parent="UserInterface/Menu2/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("20_dwnad")

[connection signal="gui_input" from="ConstellationEditor/SubViewport/TextureRect" to="ConstellationEditor" method="_on_texture_rect_gui_input"]
[connection signal="set_planet" from="UserInterface/Menu1/VBoxContainer/PlanetSelector" to="." method="_on_planet_selector_set_planet"]
[connection signal="toggled" from="UserInterface/Menu1/VBoxContainer/CheckBox" to="Space/SubViewport/Camera3D" method="_on_check_box_toggled"]
[connection signal="pressed" from="UserInterface/Menu2/ScrollContainer/VBoxContainer/ButtonsToggle" to="." method="_on_buttons_toggle_pressed"]
[connection signal="pressed" from="UserInterface/Menu2/ScrollContainer/VBoxContainer/ButtonsToggle2" to="ConstellationEditor" method="_on_draw_button_pressed"]
[connection signal="pressed" from="UserInterface/Menu2/ScrollContainer/VBoxContainer/TextureButton" to="ConstellationEditor" method="_on_capture_button_pressed"]
